# as_gd_res

./: .gitignore  AGENTS.md  Cargo.toml  README.md  test_resource_extract_local.sh
.github/workflows/: gd4unit.yaml  resource_output_test.yml  rust.yml
as_gd_res/: Cargo.toml
as_gd_res/src/: copyable_base_type_impls.rs  engine_type_impls.rs  gen_resource_spec.rs  impl_wrapped_as_gd_res.rs  lib.rs
as_gd_res/src/tests/: mod.rs  rust_curve.rs
as_gd_res_derive/: Cargo.toml
as_gd_res_derive/src/: lib.rs  tests.rs
as_gd_res_derive/src/tests/: edge_cases.rs  enum_tests.rs  error_tests.rs  generics_detailed.rs  struct_attributes.rs  struct_basic.rs  struct_nested.rs  struct_nested_generics.rs  struct_post_init.rs  struct_with_generics.rs
as_simple_gd_enum_derive/: Cargo.toml
as_simple_gd_enum_derive/src/: lib.rs  tests.rs
as_simple_gd_enum_derive/src/tests/: edge_cases.rs  enum_simple_tests.rs
codex_scripts/: test_resource_extract.sh
extract_gd/: Cargo.toml
extract_gd/src/: extract.rs  extract_resource_spec.rs  gen_resource.rs  gen_resource_spec.rs  gen_resource_try_out.rs  lib.rs
extract_gd/tests/: tests.rs
extract_gd/tests/expand/: enemy_params.expanded.rs  enemy_params.rs
extract_gd_derive/: Cargo.toml
extract_gd_derive/src/: derive_inner.rs  lib.rs  tests.rs
resource_test_godot_project/: .gitignore  another_scene.tscn  expected_rust_print_output.txt  icon.svg.import  project.godot  resource_test_rust.gdextension  resource_test_rust.gdextension.uid  test_complicated_resource.tres  test_scene.tscn  unit_test.gd  unit_test.gd.uid
resource_test_godot_project/addons/gdUnit4/: plugin.gd.uid
resource_test_godot_project/addons/gdUnit4/src/: Comparator.gd.uid  Fuzzers.gd.uid  GdUnitArrayAssert.gd.uid  GdUnitAssert.gd.uid  GdUnitAwaiter.gd.uid  GdUnitBoolAssert.gd.uid  GdUnitConstants.gd.uid  GdUnitDictionaryAssert.gd.uid  GdUnitFailureAssert.gd.uid  GdUnitFileAssert.gd.uid  GdUnitFloatAssert.gd.uid  GdUnitFuncAssert.gd.uid  GdUnitGodotErrorAssert.gd.uid  GdUnitIntAssert.gd.uid  GdUnitObjectAssert.gd.uid  GdUnitResultAssert.gd.uid  GdUnitSceneRunner.gd.uid  GdUnitSignalAssert.gd.uid  GdUnitStringAssert.gd.uid  GdUnitTestSuite.gd.uid  GdUnitTuple.gd.uid  GdUnitValueExtractor.gd.uid  GdUnitVectorAssert.gd.uid
resource_test_godot_project/addons/gdUnit4/src/asserts/: CallBackValueProvider.gd.uid  DefaultValueProvider.gd.uid  GdAssertMessages.gd.uid  GdAssertReports.gd.uid  GdUnitArrayAssertImpl.gd.uid  GdUnitAssertImpl.gd.uid  GdUnitAssertions.gd.uid  GdUnitBoolAssertImpl.gd.uid  GdUnitDictionaryAssertImpl.gd.uid  GdUnitFailureAssertImpl.gd.uid  GdUnitFileAssertImpl.gd.uid  GdUnitFloatAssertImpl.gd.uid  GdUnitFuncAssertImpl.gd.uid  GdUnitGodotErrorAssertImpl.gd.uid  GdUnitIntAssertImpl.gd.uid  GdUnitObjectAssertImpl.gd.uid  GdUnitResultAssertImpl.gd.uid  GdUnitSignalAssertImpl.gd.uid  GdUnitStringAssertImpl.gd.uid  GdUnitVectorAssertImpl.gd.uid  ValueProvider.gd.uid
resource_test_godot_project/addons/gdUnit4/src/cmd/: CmdArgumentParser.gd.uid  CmdCommand.gd.uid  CmdCommandHandler.gd.uid  CmdConsole.gd.uid  CmdOption.gd.uid  CmdOptions.gd.uid
resource_test_godot_project/addons/gdUnit4/src/core/: GdArrayTools.gd.uid  GdDiffTool.gd.uid  GdFunctionDoubler.gd.uid  GdObjects.gd.uid  GdUnit4Version.gd.uid  GdUnitClassDoubler.gd.uid  GdUnitFileAccess.gd.uid  GdUnitObjectInteractions.gd.uid  GdUnitObjectInteractionsTemplate.gd.uid  GdUnitProperty.gd.uid  GdUnitResult.gd.uid  GdUnitRunner.gd.uid  GdUnitRunnerConfig.gd.uid  GdUnitSceneRunnerImpl.gd.uid  GdUnitScriptType.gd.uid  GdUnitSettings.gd.uid  GdUnitSignalAwaiter.gd.uid  GdUnitSignalCollector.gd.uid  GdUnitSignals.gd.uid  GdUnitSingleton.gd.uid  GdUnitTestResourceLoader.gd.uid  GdUnitTestSuiteBuilder.gd.uid  GdUnitTestSuiteScanner.gd.uid  GdUnitTools.gd.uid  GodotVersionFixures.gd.uid  LocalTime.gd.uid  _TestCase.gd.uid
resource_test_godot_project/addons/gdUnit4/src/dotnet/: GdUnit4CSharpApiLoader.gd.uid
resource_test_godot_project/addons/gdUnit4/src/doubler/: CallableDoubler.gd.uid  GdFunctionDoubler.gd.uid  GdUnitClassDoubler.gd.uid  GdUnitFunctionDoublerBuilder.gd.uid  GdUnitMockFunctionDoubler.gd.uid  GdUnitObjectInteractions.gd.uid  GdUnitObjectInteractionsVerifier.gd.uid  GdUnitSpyFunctionDoubler.gd.uid
resource_test_godot_project/addons/gdUnit4/src/extractors/: GdUnitFuncValueExtractor.gd.uid
resource_test_godot_project/addons/gdUnit4/src/fuzzers/: FloatFuzzer.gd.uid  Fuzzer.gd.uid  IntFuzzer.gd.uid  StringFuzzer.gd.uid  Vector2Fuzzer.gd.uid  Vector3Fuzzer.gd.uid
resource_test_godot_project/addons/gdUnit4/src/matchers/: AnyArgumentMatcher.gd.uid  (+6 more)
resource_test_godot_project/addons/gdUnit4/tmp-update/: 141b5527-168a-4745-91ce-2c8d9112cda1.png.import  bfc50400-557e-4458-91cd-e50c5af297d8.png.import  d193a8d3-a14c-403a-bf71-7923fb49bc47.png.import  fe90f750-e9c6-4ff9-b892-2885f00fd71c.png.import
resource_test_godot_project/reports/report_3/: index.html  results.xml
resource_test_godot_project/reports/report_3/path/: .html
resource_test_godot_project/reports/report_3/test_suites/: .unit_test.html
resource_test_rust/: Cargo.toml
resource_test_rust/src/: lib.rs
(+141 files in other folders)
