[workspace]
members = [
  "as_gd_res",
  "as_gd_res_derive",
  "as_simple_gd_enum_derive",
  "resource_test_rust",
]
resolver = "2"

[workspace.dependencies]
godot = { version = "0.5.0", features = [
  "register-docs",
  "experimental-threads",
] }
syn = { version = "2.0.101", features = ["full", "extra-traits"] }
quote = "1.0.21"
proc-macro2 = "1.0.47"
pretty_assertions = "1.4.1"
