[package]
name = "as_gd_res"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
# extract_gd_derive = { path = "../extract_gd_derive" }
as_gd_res_derive = { path = "../as_gd_res_derive" }
as_simple_gd_enum_derive = { path = "../as_simple_gd_enum_derive" }


godot = { git = "https://github.com/bcolloran/gdext.git", rev = "f67a1ae43b1e06cd9a58ccb9d6330bf06c6e25ff", features = [
  "register-docs",
  "experimental-threads",
] }

# godot = { path = "/data/code_projects/rust/gdext/godot", features = [
#   "register-docs",
#   # experimental-threads needed because of  https://github.com/godot-rust/gdext/issues/597
#   "experimental-threads",
# ] }
