[package]
name = "as_gd_res"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
as_gd_res_derive = { path = "../as_gd_res_derive" }
as_simple_gd_enum_derive = { path = "../as_simple_gd_enum_derive" }

godot = { version = "0.3", features = [
  "register-docs",
  "experimental-threads",
] }
