[package]
name = "as_gd_res"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["easy_hash"]
easy_hash = ["dep:easy_hash", "dep:fletcher"]

[dependencies]
as_gd_res_derive = { path = "../as_gd_res_derive" }
as_simple_gd_enum_derive = { path = "../as_simple_gd_enum_derive" }

godot = { version = "0.4.5", features = [
  "register-docs",
  "experimental-threads",
] }


easy_hash = { git = "https://github.com/bcolloran/easy_hash.git", branch = "master", optional = true }
fletcher = { version = "0.3.0", optional = true }
